--- a/public/views/green.html
+++ b/public/views/green.html
@@ -1,3 +1,5 @@
-<div class="bg-danger" ng-repeat="pet in data.pets"> -->
+<div class="bg-success" ng-repeat="pet in data.pets"> -->
   <input type="text" ng-model="pet.name" />
 </div>
+
+<input type="text" ng-model="data.fav" />
