--- a/public/views/red.html
+++ b/public/views/red.html
@@ -1,4 +1,8 @@
-<div class="bg-danger" ng-repeat="pet in data.pets"> -->
-   {{pet}}
+<br/>
+
+
+<div class="bg-danger" ng-repeat="pet in data.pets">
   <input type="text" ng-model="pet.name" />
 </div>
+
+<input type="text" ng-model="data.fav" />
